gitinore忽略工程文件和include目录

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,9 @@ Mkfile.old
 dkms.conf
 
 *.txt
+
+.vs/
+TcpIpNetworkPrograming.sln
+TcpIpNetworkPrograming.vcxproj
+TcpIpNetworkPrograming.vcxproj.filters
+include/
