--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,9 @@ dkms.conf
 *.txt
 
 .vs/
-TcpIpNetworkPrograming.sln
-TcpIpNetworkPrograming.vcxproj
-TcpIpNetworkPrograming.vcxproj.filters
+TcpIpSocketPrograming.sln
+TcpIpSocketPrograming.vcxproj
+TcpIpSocketPrograming.vcxproj.filters
 include/
 *.vcxproj.user
+core.*
