--- a/Windows/TCP-IPNetworkPrograming/AcceptExFunction/AcceptExFunction.vcxproj.filters
+++ b/Windows/TCP-IPNetworkPrograming/AcceptExFunction/AcceptExFunction.vcxproj.filters
@@ -16,7 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AcceptExFunction.cpp">
-      <Filter>Resource Files</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
