--- a/Windows/TCP-IPNetworkPrograming/CmplRouEchoServ/CmplRouEchoServ.vcxproj
+++ b/Windows/TCP-IPNetworkPrograming/CmplRouEchoServ/CmplRouEchoServ.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CmplRouEchoServ.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
