--- a/Linux/Demo/DemoProject/DemoProject/DemoProject.vcxproj
+++ b/Linux/Demo/DemoProject/DemoProject/DemoProject.vcxproj
@@ -63,6 +63,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
     <IncludePath>$(PUBLIC)\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
+    <IncludePath>$(PUBLIC)\include;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <ItemGroup>
     <ClCompile Include="nonBlockingConnect.cpp" />
   </ItemGroup>
