--- a/Windows/WinHttpServer/WinHttpServer/WinHttpServer.vcxproj.filters
+++ b/Windows/WinHttpServer/WinHttpServer/WinHttpServer.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Net.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DataPacket.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Net.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DataPacket.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
