--- a/Windows/WinHttpServer/WinHttpServer/WinHttpServer.vcxproj
+++ b/Windows/WinHttpServer/WinHttpServer/WinHttpServer.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -152,6 +152,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Buffer.h" />
     <ClInclude Include="DataPacket.h" />
     <ClInclude Include="IocpServer.h" />
     <ClInclude Include="Net.h" />
