--- a/Windows/WinHttpServer/WinHttpServer/WinHttpServer.vcxproj.filters
+++ b/Windows/WinHttpServer/WinHttpServer/WinHttpServer.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="Slice.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LockGuard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
