--- a/Windows/WinHttpServer/WinHttpServer/WinHttpServer.vcxproj
+++ b/Windows/WinHttpServer/WinHttpServer/WinHttpServer.vcxproj
@@ -153,6 +153,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Buffer.h" />
+    <ClInclude Include="Buffer_old.h" />
     <ClInclude Include="ClientContext.h" />
     <ClInclude Include="Codec.h" />
     <ClInclude Include="DataPacket.h" />
@@ -160,12 +161,14 @@
     <ClInclude Include="IoContext.h" />
     <ClInclude Include="IocpServer.h" />
     <ClInclude Include="LockGuard.h" />
+    <ClInclude Include="Mempool.h" />
     <ClInclude Include="Net.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Slice.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Buffer.cpp" />
+    <ClCompile Include="Buffer_old.cpp" />
     <ClCompile Include="ClientContext.cpp" />
     <ClCompile Include="Codec.cpp" />
     <ClCompile Include="DataPacket.cpp" />
