--- a/Windows/WinHttpServer/WinHttpServer/WinHttpServer.vcxproj
+++ b/Windows/WinHttpServer/WinHttpServer/WinHttpServer.vcxproj
@@ -183,6 +183,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Slice.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
