--- a/Windows/WinHttpServer/WinHttpServer/WinHttpServer.vcxproj
+++ b/Windows/WinHttpServer/WinHttpServer/WinHttpServer.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="Codec.h" />
     <ClInclude Include="Global.h" />
     <ClInclude Include="HttpCodec.h" />
+    <ClInclude Include="HttpMessage.h" />
     <ClInclude Include="HttpServer.h" />
     <ClInclude Include="IoContext.h" />
     <ClInclude Include="IocpServer.h" />
@@ -173,6 +174,8 @@
     <ClCompile Include="ClientContext.cpp" />
     <ClCompile Include="Codec.cpp" />
     <ClCompile Include="HttpCodec.cpp" />
+    <ClCompile Include="HttpMessage.cpp" />
+    <ClCompile Include="HttpServer.cpp" />
     <ClCompile Include="IoContext.cpp" />
     <ClCompile Include="IocpServer.cpp" />
     <ClCompile Include="Net.cpp" />
